✨ add: 基礎代謝量を計算するAPIの追加
